--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.6.2",
-    "element-plus": "^2.4.3",
+    "element-plus": "^2.4.4",
     "express": "^4.18.2",
+    "json-server": "^0.17.4",
+    "mockjs": "^1.1.0",
     "pinia": "^2.1.7",
     "vue": "^3.3.10",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "ws": "^8.15.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.1",
