--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.6.2",
+    "child_process": "^1.0.2",
     "element-plus": "^2.4.4",
     "express": "^4.18.2",
     "json-server": "^0.17.4",
+    "mic-recorder-to-mp3": "^2.2.2",
+    "microsoft-cognitiveservices-speech-sdk": "^1.34.0",
     "mockjs": "^1.1.0",
     "pinia": "^2.1.7",
+    "requests": "^0.3.0",
     "vue": "^3.3.10",
     "vue-router": "^4.2.5",
     "ws": "^8.15.1"
