--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "microsoft-cognitiveservices-speech-sdk": "^1.34.0",
     "mockjs": "^1.1.0",
     "pinia": "^2.1.7",
+    "recorder-core": "^1.3.23122400",
     "requests": "^0.3.0",
     "vue": "^3.3.10",
     "vue-router": "^4.2.5",
