--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "autoprefixer": "^10.4.16",
     "axios": "^1.6.2",
     "child_process": "^1.0.2",
     "element-plus": "^2.4.4",
@@ -19,8 +20,10 @@
     "microsoft-cognitiveservices-speech-sdk": "^1.34.0",
     "mockjs": "^1.1.0",
     "pinia": "^2.1.7",
+    "postcss-nested": "^6.0.1",
     "recorder-core": "^1.3.23122400",
     "requests": "^0.3.0",
+    "vh-check": "^2.0.5",
     "vue": "^3.3.10",
     "vue-router": "^4.2.5",
     "ws": "^8.15.1"
@@ -28,6 +31,11 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.1",
     "less": "^4.2.0",
+    "postcss": "^8.4.33",
+    "postcss-100vh-fix": "^1.0.2",
+    "postcss-import": "^16.0.0",
+    "postcss-preset-env": "^9.3.0",
+    "postcss-viewport-units": "^0.1.6",
     "unplugin-auto-import": "^0.17.2",
     "unplugin-vue-components": "^0.26.0",
     "vite": "^5.0.5"
